<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.harry.mainmenu.maker">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/makerbanner" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignRight="@+id/banner"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="deleteRecipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/banner"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:onClick="backMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backbutton" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/nameRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="@drawable/edit_text_background"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/enterName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/ingredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/ingredientsTitle" />

            <LinearLayout
                android:id="@+id/newIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/ingredientsTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/stepTitle" />

            <LinearLayout
                android:id="@+id/newTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/centre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/addIngredient"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_toLeftOf="@id/centre"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:textColor="@color/green"
            android:text="@string/tapToAddIngredient" />

        <Button
            android:id="@+id/addStep"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/addIngredient"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:textColor="@color/green"
            android:text="@string/tapToAddInstruction" />

        <Button
            android:id="@+id/createRecipe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/createRecipe" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
